--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </body>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    var socket = io("http://localhost:3000");
+    var socket = io();
 
     const user = prompt("Enter your Name", "@username");
 
